kubernetes/apps/nas/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: nas
spec:
  type: ExternalName
  externalName: 10.9.0.50
  ports:
    - name: http
      port: 80
      targetPort: 80
